# psi_esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPONENTS_MEMORY_ANALYSIS.md  LEAK_ANALYSIS.md  MEMORY_OPTIMIZATION.md  PSRAM_SHARED_PTR_INTEGRATION.md  copy_sources.sh  gdbinit  partitions.csv  sdkconfig  sdkconfig.defaults
components/libdatachannel/: CMakeLists.txt  esp32_netif.cpp  esp32_random.cpp  esp32_sockutils.cpp  esp32_time.cpp  psram_allocator.cpp
components/libdatachannel/include/: esp32_compat.h  esp32_malloc_redirect.h  esp32_psram_init.h  ifaddrs.h  netdb_compat.h  psram_shared_ptr.hpp
components/libdatachannel/include/rtc/: av1rtppacketizer.hpp  common.hpp  frameinfo.hpp  global.hpp  h264rtppacketizer.hpp  h265nalunit.hpp  h265rtppacketizer.hpp  message.hpp  nalunit.hpp  rtcpnackresponder.hpp  rtppacketizer.hpp
components/libdatachannel/src/: av1rtppacketizer.cpp  candidate.cpp  global.cpp  h264rtppacketizer.cpp  h265nalunit.cpp  h265rtppacketizer.cpp  message.cpp  nalunit.cpp  rtcpnackresponder.cpp  rtp.cpp  rtppacketizer.cpp
components/libdatachannel/src/impl/: certificate.cpp  dtlssrtptransport.cpp  dtlstransport.cpp  init.cpp  peerconnection.cpp  pollservice.cpp  pollservice.hpp  sctptransport.cpp  tcptransport.cpp  tlstransport.cpp  track.cpp  utils.cpp
components/libjuice/: CMakeLists.txt
components/libjuice/include/: netdb.h  poll.h
components/libjuice/src/: juice.h  udp.c  udp.h
components/libsrtp/: CMakeLists.txt
components/plog/: CMakeLists.txt
components/plog/include/plog/: Init.h  Log.h
components/plog/include/plog/Appenders/: Esp32Appender.h
components/usrsctp/: CMakeLists.txt  esp32_compat.c
components/usrsctp/include/: ifaddrs.h
components/usrsctp/include/netinet/: esp32_compat.h  icmp6.h  in_compat.h  udp.h
components/usrsctp/include/sys/: prctl.h  queue.h  syscall.h
components/usrsctp/src/: user_environment.c  user_socket.c  usrsctp.h
components/usrsctp/src/netinet/: sctp_os_userspace.h  sctp_output.c  sctp_pcb.c  sctp_process_lock.h  sctp_usrreq.c  sctputil.c
libstdcpp/: .gitignore  README.md  build.sh  install_patches.sh  install_to_toolchain.sh  patch_toolchain.sh  restore_patches.sh  restore_toolchain.sh
libstdcpp/install/include/c++/14.2.0/: shared_mutex
libstdcpp/install/include/c++/14.2.0/riscv32-esp-elf/bits/: c++config.h
libstdcpp/install/lib/: libstdc++.la  libsupc++.la
main/: CMakeLists.txt  LEAK_TRACKER_README.md  alloc_trace.c  alloc_trace.h  esp32_libdatachannel_console.txt  esp32_video.cpp  esp32_video.hpp  esp_websocket_wrapper.cpp  esp_websocket_wrapper.hpp  fileparser.cpp  fileparser.hpp  h264fileparser.cpp  h264fileparser.hpp  helpers.hpp  httpd_server.cpp  httpd_server.hpp  httpd_test.c  httpd_test.h  idf_component.yml  main.cpp  memory_tracker.cpp  memory_tracker.hpp  new_operator_trace.cpp  opusfileparser.cpp  opusfileparser.hpp  psi_esp32_console.txt  psi_main.cpp  stream.cpp  streamer.hpp  streamer_main.cpp  video_streamer.cpp  video_streamer.hpp
media_files/: README.md
media_files/h264/: 0.h264  1.h264  2.h264
